# reason-engine

./: LICENSE  README.md  pyproject.toml
claude/commands/: reason.md
claude/commands/reason/workers/: adversarial.md  baseline.md  domain-expert.md  skeptic.md  synthesist.md
claude/enforcements/: reason-trigger.py  reason-validator.py
reason/: __init__.py  audit.py  eval_runner.py  freshness.py  freshness_audit.py  freshness_proposals.py  judge.py  parser.py  semantic_sampler.py  trigger.py  validator.py
scripts/: install-skill.sh
tests/: eval_questions.jsonl  test_audit_log.py  test_e2e_smoke.py  test_eval.py  test_freshness.py  test_freshness_audit.py  test_freshness_e2e.py  test_freshness_guard.py  test_freshness_logger.py  test_freshness_proposals.py  test_freshness_sessionstart.py  test_hook_integration.py  test_judge.py  test_parser.py  test_semantic_sampler.py  test_slash_command.py  test_smoke.py  test_sycophancy_guard.py  test_trigger.py  test_trigger_cli.py  test_validator.py  test_worker_prompts.py
tests/fixtures/: worker_adversarial_ok.md  worker_baseline_ok.md  worker_empirical_bad_fabricated.md  worker_empirical_bad_nocites.md
