[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reason-engine"
version = "0.1.0"
description = "Step-back + role-diverse workers + rubric-judge reasoning pipeline."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "orjson>=3.10"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "hypothesis>=6.100"]

[tool.setuptools.packages.find]
include = ["reason*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
